--- a/java_script/part2.html
+++ b/java_script/part2.html
@@ -52,12 +52,12 @@
                     }   
                     if(guess_input>target)
                     {
-                       alert("\n\n> Your color is higher\n\n");
+                       alert("\n\nSorry, your guess is not correct \n\n Hint: > Your color is higher\n\n");
                        return false;
                     }   
                     else if(guess_input<target)
                     {
-                       alert("\n\n> Your color is lower\n\n");
+                       alert("\n\nSorry, your guess is not correct \n\n Hint: > Your color is lower\n\n");
                        return false;
                     }   
 
