--- a/Advance_js/part1.html
+++ b/Advance_js/part1.html
@@ -6,13 +6,23 @@
         <meta chatset="UTF8">
 
         <style>
-            .leftSide 
+
+            img {
+                position: absolute;
+            }
+
+            #leftSide 
             {
+
+                position: absolute;
                 width:500px;
                 height:500px;
             }
-            .rightSide
+            
+            #rightSide
             {
+                position: absolute;
+                left: 500px;
                 width:500px;
                 height:500px;
                 border-left: 1px solid black;
