--- a/Advance_js/part1.html
+++ b/Advance_js/part1.html
@@ -11,9 +11,8 @@
                 position: absolute;
             }
 
-            #leftSide 
+            div 
             {
-
                 position: absolute;
                 width:500px;
                 height:500px;
@@ -21,10 +20,7 @@
             
             #rightSide
             {
-                position: absolute;
                 left: 500px;
-                width:500px;
-                height:500px;
                 border-left: 1px solid black;
             }
         </style>
@@ -33,10 +29,8 @@
     <body>
         <h2>Matching Game</h2>
         <p>Click on the extra smiling face on the left.<p>
-            <div id="leftSide">
 
-            </div>
-
+            <div id="leftSide"></div>
             <div id="rightSide"></div>
     </body>
 
